# pba-ms-robotics

./: .dockerignore  .env.template  .gitignore  Dockerfile.dev  README.md  mypy.ini  pyproject.toml  pyrightconfig.json
data/sequences/: Cansado.json  MANO-DERECHA-ABIERTA.json  SALUDO-DERECHA.json  SALUDO-IZQUIERDO.json  SALUDO-NEUTRO.json  SEÑALAR-NEUTRO.json  SEÑALAR.json  SORPRESA-2-0.json  SORPRESA-NEUTRA.json  moviento-dedos.json  saludo2.json  secuencia.json
data/sequences/Movimientos/CANSADO/: CANSADOOO-NEUTROOO.json  CANSADOOO.json
data/sequences/Movimientos/ENOJADO/: ENOJADOOO-NEUTRO.json  ENOJADOOO.json
data/sequences/Movimientos/GUIÑOS/: GUIÑO-DERECHO.json  GUIÑO-IZQUIERDO.json
data/sequences/Movimientos/MAXIMOS-Y-MINIMOS/: ANTEBRAZO-MAXIMOS-2-0.json  ANTEBRAZOS-NEUTRO-2-0.json  BICEPS-MAXIMOS.json  BICEPS-MINIMOS.json  BICEPS-NEUTROS.json  BRAZOS-MAXIMO.json  BRAZOS-NEUTRO-2-0.json  NETRO-COMPLETO-CARA.json  NEUTRO-CABEZA.json
data/sequences/Movimientos/MIRADA-DISIMULADA/: MIRADA-DISIMULADA-NEUTRO.json  OJITOS-DISIMULADOS.json  OJITOS-IZQUIERDA.json
data/sequences/Movimientos/MOVIMIENTOS-AGRUPADOS/: BRAZO-CON-GUIÑO-DERE.json  BRAZO-CON-GUIÑO-NEUTRO-DERE.json  GUIÑO-BRAZITOS-NEUTRO.json  GUIÑO-CON-BRAZITO.json  PESTAÑEO-CON-MANDIBULA-NEUTRO.json  PESTAÑEO-CON-MANDIBULA.json
data/sequences/Movimientos/PESTAÑEO/: PESTAÑEO.json
data/sequences/Movimientos/ROTACIONES/: ROTACION-IZQUIERDA.json  ROTACION-NEUTRA.json  ROTACIPN-DERECHA.json
data/sequences/Movimientos/SALUDOS/: SALUDAR-NEUTRO.json  SALUDAR.json  SALUDITO-NEUTRO.json  SALUDITO.json  SALUDO-DERECHA.json  SALUDO-IZQUIERDO.json  SALUDO-NEUTRO.json
data/sequences/Movimientos/SORPRESA/: SORPRESA-2-0.json  SORPRESA-NEUTRA-2-0.json
data/sequences/Movimientos/USTED-SE-VA/: USTED-SE-VA-NEUTRO.json  USTED-SE-VA.json
src/: app.py  app_controller.py
src/action/: action_controller.py  action_service.py
src/action/constants/: action_constant.py
src/action/interfaces/: arduino_connection.py  command_interface.py
src/action/utils/: arduino_utils.py  json_reader.py
src/core/interfaces/: health.py  paginated_response.py
src/core/nats/: nats_client.py  nats_subscribers.py  nest_request.py
src/core/nats/interfaces/: nats_interface.py
src/core/settings/: env.py
src/sequence/: sequence_controller.py  sequence_service.py
src/sequence/interfaces/: sequence_interface.py
src/voice/: __init__.py  playback.py  voice_controller.py  voice_service.py
src/voice/output/: __init__.py  sink.py
src/voice/tts/: __init__.py  tts_local.py  tts_openai.py
src/voice/utils/: errors.py  playback.py  speech_text.py
