[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pba-ms-robotics"
version = "0.1.0"
description = "Prometeo Backend Architecture Robotics Microservice"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "nats-py>=2.12.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.7.0",
    "pyright>=1.1.320",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "pre-commit>=3.5.0",
    "debugpy>=1.8.0",
]

# ──────────────────────────────────────────────
# Setuptools
# ──────────────────────────────────────────────
[tool.setuptools]
packages = { find = {} }

[tool.setuptools.package-dir]
"" = "."

# ──────────────────────────────────────────────
# Mypy — tipado estricto
# ──────────────────────────────────────────────
[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
strict_optional = true
show_error_codes = true
show_error_context = true
pretty = true
show_column_numbers = true
incremental = true
cache_dir = ".mypy_cache"
exclude = ["build/", "dist/", ".venv/", "venv/", "__pycache__/", ".mypy_cache/"]

# ──────────────────────────────────────────────
# Pyright — tipado estricto
# ──────────────────────────────────────────────
[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", ".venv", "venv", "build", "dist"]
stubPath = "typings"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedVariable = true
reportUnusedClass = true
reportUnusedFunction = true
reportDuplicateImport = true
reportWildcardImportFromLibrary = false
reportOptionalSubscript = true
reportOptionalMemberAccess = true
reportOptionalCall = true
reportOptionalIterable = true
reportOptionalContextManager = true
reportOptionalOperand = true
reportGeneralTypeIssues = true
reportPrivateImportUsage = true
pythonVersion = "3.13"
pythonPlatform = "Linux"
typeCheckingMode = "strict"
strictListInference = true
strictDictionaryInference = true
strictSetInference = true

# ──────────────────────────────────────────────
# Black
# ──────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = [
    "py313",
] # black aún no soporta py314 — usar el más cercano disponible
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs | \.git | \.hg | \.mypy_cache
  | \.tox | \.venv | venv | build | dist
)/
'''

# ──────────────────────────────────────────────
# Ruff — linting (API v0.1+ requiere [tool.ruff.lint])
# ──────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py313" # igual que black, usar el más cercano soportado

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ANN", # flake8-annotations — refuerza tipado en firmas
    "RUF", # reglas propias de ruff
]
ignore = [
    "E501", # line too long, delegado a black
    "B008", # llamadas en defaults de argumentos
    "C901", # complejidad ciclomática
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ANN"]      # no forzar anotaciones en tests
