[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pba-ms-robotics"
version = "0.1.0"
description = "Prometeo Backend Architecture Robotics Microservice"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nats-py>=2.12.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1.320",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "debugpy>=1.8.0",
]

# ──────────────────────────────────────────────
# Setuptools
# ──────────────────────────────────────────────
[tool.setuptools]
packages = { find = {} }

[tool.setuptools.package-dir]
"" = "."

# ──────────────────────────────────────────────
# Pyright — única fuente de verdad para tipado
# ──────────────────────────────────────────────
[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", ".venv", "venv", "build", "dist"]
stubPath = "typings"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedVariable = true
reportUnusedClass = true
reportUnusedFunction = true
reportDuplicateImport = true
reportWildcardImportFromLibrary = false
reportOptionalSubscript = true
reportOptionalMemberAccess = true
reportOptionalCall = true
reportOptionalIterable = true
reportOptionalContextManager = true
reportOptionalOperand = true
reportGeneralTypeIssues = true
reportPrivateImportUsage = true
pythonVersion = "3.13"
pythonPlatform = "Linux"
typeCheckingMode = "strict"
strictListInference = true
strictDictionaryInference = true
strictSetInference = true

# ──────────────────────────────────────────────
# Black
# ──────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs | \.git | \.hg | \.mypy_cache
  | \.tox | \.venv | venv | build | dist
)/
'''

# ──────────────────────────────────────────────
# Ruff
# ──────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "RUF", # reglas propias de ruff
]
ignore = [
    "E501", # line too long, delegado a black
    "B008", # llamadas en defaults de argumentos
    "C901", # complejidad ciclomática
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*"     = ["ANN"]

# ──────────────────────────────────────────────
# Pytest
# ──────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"